libs/pavex_macros/tests/route/fail/not_a_function.rs
use pavex_macros::get;

#[get(path = "/api")]
pub struct A;

fn main() {}
